unpackaged/main/default/objects/Pricebook2/fields/Cegid_Entity__c.field-meta.xml
<CustomField>
    <fullName>Cegid_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cegid Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Entity__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>