unpackaged/main/default/objects/Pricebook2/fields/Default_ICS__c.field-meta.xml
<CustomField>
    <fullName>Default_ICS__c</fullName>
    <label>Default ICS</label>
    <length>15</length>
    <type>Text</type>
</CustomField>