unpackaged/main/default/objects/Pricebook2/fields/Entity_City__c.field-meta.xml
<CustomField>
    <fullName>Entity_City__c</fullName>
    <formula>Cegid_Entity__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity City</label>
    <type>Text</type>
</CustomField>