unpackaged/main/default/objects/Pricebook2/fields/Entity_Country__c.field-meta.xml
<CustomField>
    <fullName>Entity_Country__c</fullName>
    <formula>Cegid_Entity__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Country</label>
    <type>Text</type>
</CustomField>