unpackaged/main/default/objects/Pricebook2/fields/Entity_ICS__c.field-meta.xml
<CustomField>
    <fullName>Entity_ICS__c</fullName>
    <formula>Cegid_Entity__r.ICS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity ICS</label>
    <type>Text</type>
</CustomField>