unpackaged/main/default/objects/Pricebook2/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <formula>Cegid_Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Name</label>
    <type>Text</type>
</CustomField>