unpackaged/main/default/objects/Pricebook2/fields/Entity_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Entity_PostalCode__c</fullName>
    <formula>Cegid_Entity__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity PostalCode</label>
    <type>Text</type>
</CustomField>