unpackaged/main/default/objects/Pricebook2/fields/Entity_Street__c.field-meta.xml
<CustomField>
    <fullName>Entity_Street__c</fullName>
    <formula>Cegid_Entity__r.Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Street</label>
    <type>Text</type>
</CustomField>