unpackaged/main/default/objects/Pricebook2/fields/EntityPostalInfo__c.field-meta.xml
<CustomField>
    <fullName>EntityPostalInfo__c</fullName>
    <description>Combined info Postal Code, City and Country (used in DocuSign template)</description>
    <formula>Entity_PostalCode__c &amp; ' ' &amp; Entity_City__c &amp; ' ' &amp; Entity_Country__c</formula>
    <label>Entity Postal Info</label>
    <type>Text</type>
</CustomField>