unpackaged/main/default/objects/Pricebook2/fields/ERP_company_id__c.field-meta.xml
<CustomField>
    <fullName>ERP_company_id__c</fullName>
    <label>ERP Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>