unpackaged/main/default/objects/Pricebook2/fields/Synchronization__c.field-meta.xml
<CustomField>
    <fullName>Synchronization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synchronization</label>
    <type>Checkbox</type>
</CustomField>