unpackaged/main/default/objects/Pricebook2/fields/Synchronization_Date__c.field-meta.xml
<CustomField>
    <fullName>Synchronization_Date__c</fullName>
    <label>Synchronization Date</label>
    <type>DateTime</type>
</CustomField>