unpackaged/main/default/objects/Pricebook2/fields/Tax_Model__c.field-meta.xml
<CustomField>
    <fullName>Tax_Model__c</fullName>
    <label>Tax Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NonTaxable</fullName>
            </value>
            <value>
                <fullName>Avalara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>